# shuke

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.dep  Makefile.dpdk  TODO  bootstrap.sh  config.mk  readme.md
3rd/dpdk-stable-17.05.1/app/test-pmd/: config.c
3rd/dpdk-stable-17.05.1/lib/librte_vhost/: vhost.c  vhost_user.c
3rd/dpdk-stable-17.05.1/pkg/: dpdk.spec
3rd/dpdk-stable-17.05.2/app/test-crypto-perf/: cperf_test_latency.c  cperf_test_throughput.c  cperf_test_verify.c
3rd/dpdk-stable-17.05.2/app/test-pmd/: cmdline_flow.c  config.c
3rd/dpdk-stable-17.05.2/pkg/: dpdk.spec
conf/: shuke.conf  shuke.toml  shuke.yaml
src/: CMakeLists.txt  Makefile  admin.c  ae.c  ae.h  anet.c  anet.h  asciilogo.h  bench.c  conf.c  conf.h  debug.c  defines.h  dict.c  dict.h  dnspacket.c  dnspacket.h  dpdk_kni.c  dpdk_module.c  dpdk_module.h  ds.c  ds.h  edns.c  edns.h  endianconv.h  list.h  log.h  ltree.c  ltree.h  mongo.c  numa_node.h  protocol.c  protocol.h  rbtree.h  rculfhash-mm-socket.c  replicate.c  replicate.h  sds.c  sds.h  shuke.c  (+22 more)
tests/: .gitignore  main.py  requirements.txt
tests/assets/: default.conf  example.z  full_example.z  test.toml  test.yaml  test_conf.conf
tests/support/: __init__.py  config.py  constants.py  server.py  settings.py  utils.py  zone2mongo.py  zone2redis.py
tests/unit/: conftest.py  test_admin.py  test_mongo.py  test_query.py  test_redis.py
tools/: admin.py  benchmark_plot.py  gen_zone_data.py  moongen_dns.lua  zone2mongo.py  zone2redis.py
vagrant/: Vagrantfile  setup.sh  test.conf  test.toml  test.yaml
(+87 files in other folders)
